completed legacy angluar basics

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,17 @@
       <h3>I'm in the app component</h3>
       <hr>
         <app-servers></app-servers>
-    </div>
+    <!-- </div>
     <div class ="col-xs-12">
       <p>In the case of failures, we will output our warning alert as seen below:</p>
       <app-warningAlert></app-warningAlert>
     </div>
     <div class ="col-xs-12">
       <p>In the case of success, we will output our success alert as seen below:</p>
-      <app-successAlert></app-successAlert>
+      <app-successAlert></app-successAlert> -->
+
+
+      
     </div>
   </div>
 </div>
